# open-servo-controller

./: .gitignore  LICENSE  README.md
.zed/: settings.json
docs/measurements/: MS18.md
firmware/bare-metal/: .editorconfig  Cargo.toml
firmware/bare-metal/.cargo/: config.toml
firmware/bare-metal/src/: main.rs
firmware/open-motor-controller/: Cargo.toml  build.rs  memory.x
firmware/open-motor-controller-embassy-stm32/: Cargo.toml
firmware/open-motor-controller-embassy-stm32/.cargo/: config.toml
firmware/open-motor-controller-stm32f3xx/: Cargo.toml
firmware/open-motor-controller-stm32f3xx/.cargo/: config.toml
firmware/open-motor-controller-stm32f3xx/src/: lib.rs
firmware/open-motor-controller-stm32f3xx/tests/: integration.rs
firmware/open-motor-controller-stm32f4xx/: Cargo.toml
firmware/open-motor-controller-stm32f4xx/src/: lib.rs
firmware/open-motor-controller/.cargo/: config.toml
firmware/open-motor-controller/src/: main.rs
firmware/open-servo-controller/: Cargo.toml  memory.x
firmware/open-servo-controller/src/: main.rs
hardware/: .gitignore
hardware/common/: symbols.kicad_sym
hardware/common/3DModels/: DSG0008A.stp  OPTO-SMD-4_ITR1204SR10A.step  sg90_motor.stp
hardware/common/footprints.pretty/: DRV8231ADSGR.kicad_mod  OPTO-SMD-4_ITR1204SR10A.kicad_mod  SG90_Motor.kicad_mod
hardware/encoder-board/: encoder-board.kicad_pcb  encoder-board.kicad_pro  encoder-board.kicad_sch  sym-lib-table
hardware/encoder-board/jlcpcb/: project.db
hardware/encoder-board/jlcpcb/gerber/: encoder-board-CuBottom.gbr  encoder-board-CuIn1.gbr  encoder-board-CuIn2.gbr  encoder-board-CuTop.gbr  encoder-board-EdgeCuts.gbr  encoder-board-MaskBottom.gbr  encoder-board-MaskTop.gbr  encoder-board-NPTH.drl  encoder-board-PTH.drl  encoder-board-PasteBottom.gbr  encoder-board-PasteTop.gbr  encoder-board-SilkBottom.gbr  encoder-board-SilkTop.gbr  encoder-board-VScore.gbr
hardware/motor-mount/: fp-lib-table  motor-mount.kicad_pcb  motor-mount.kicad_pro  motor-mount.kicad_sch
hardware/motor-mount/jlcpcb/: project.db
hardware/motor-mount/jlcpcb/gerber/: motor-mount-CuBottom.gbr  motor-mount-CuTop.gbr  motor-mount-EdgeCuts.gbr  motor-mount-MaskBottom.gbr  motor-mount-MaskTop.gbr  motor-mount-NPTH.drl  motor-mount-PTH.drl  motor-mount-PasteBottom.gbr  motor-mount-PasteTop.gbr  motor-mount-SilkBottom.gbr  motor-mount-SilkTop.gbr  motor-mount-VScore.gbr
hardware/servo-dev-board/: fp-lib-table  servo-dev-board.kicad_dru  servo-dev-board.kicad_pcb  servo-dev-board.kicad_pro  servo-dev-board.kicad_sch  sym-lib-table
hardware/servo-dev-board/jlcpcb/: project.db
hardware/servo-dev-board/jlcpcb/gerber/: servo-dev-board-CuBottom.gbr  servo-dev-board-CuIn1.gbr  servo-dev-board-CuIn2.gbr  servo-dev-board-CuTop.gbr  servo-dev-board-EdgeCuts.gbr  servo-dev-board-MaskBottom.gbr  servo-dev-board-MaskTop.gbr  servo-dev-board-NPTH.drl  servo-dev-board-PTH.drl  servo-dev-board-PasteBottom.gbr  servo-dev-board-PasteTop.gbr  servo-dev-board-SilkBottom.gbr  servo-dev-board-SilkTop.gbr  servo-dev-board-VScore.gbr
hardware/servo-dev-board/lib/: lib.kicad_sym
hardware/servo-dev-board/lib/lib.3dshapes/: CONN-SMD_4P-L6.0-W2.9-H4.3-P1.0.step  CONN-SMD_B5B-ZR-SM4-TFT.step  CONN-SMD_B5B-ZR-SM4-TFT.wrl  CONN-SMD_SR1.00-WS-5P.step  CONN-SMD_SR1.00-WS-5P.wrl  IDC-TH_10P-P1.27-X1270WV-2X05A-6TV01.step  IDC-TH_10P-P1.27-X1270WV-2X05A-6TV01.wrl  KEY-SMD_4P-L4.2-W3.2-H2.5-LS4.6-P2.2.step  MICRO-USB-SMD_10103594-0001LF.step
hardware/servo-dev-board/lib/lib.pretty/: IDC-TH_10P-P1.27-X1270WV-2X05A-6TV01.kicad_mod
hardware/servo-test-board/: servo-test-board.kicad_pcb  servo-test-board.kicad_pro  servo-test-board.kicad_sch  sym-lib-table
mechanical/: encoder-disk.scad  motor-mount.scad  vial-rack.scad
mechanical/lib/: gears.scad
mechanical/optical-encoder/: encoder-disk.scad  encoder-disk.stl
mechanical/optical-encoder/lib/: gears.scad
simulations/: .gitignore  MS18.md  theory.ipynb
software/: record-data.bash
software/controller-firmware/: Cargo.toml  build.rs  helpers.sce  record-data.bash
software/controller-firmware/src/: main.rs  pwm.rs.bak  serial.rs.bak
