[package]
name = "open-motor-controller"
edition = "2021"
version = "0.1.0"

[dependencies.embassy-stm32]
version = "0.1.0"
path = "../../../embassy/embassy-stm32"
features = [
    "defmt",
    "stm32f301k8",
    "unstable-pac",
    "memory-x",
    "time-driver-tim2",
    "exti",
]

[dependencies.embassy-sync]
version = "0.6.1"
path = "../../../embassy/embassy-sync"
features = [
    "defmt",
]

[dependencies.embassy-executor]
version = "0.7.0"
path = "../../../embassy/embassy-executor"
features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
]

[dependencies.embassy-time]
version = "0.4.0"
path = "../../../embassy/embassy-time"
features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
]

[dependencies.embassy-futures]
version = "0.1.0"
path = "../../../embassy/embassy-futures"

[dependencies.cortex-m]
version = "0.7.6"
features = [
    "inline-asm",
    "critical-section-single-core",
]

[dependencies.cortex-m-rt]
version = "0.7.0"


[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# embedded-hal = "0.2.6"
# heapless = { version = "0.8", default-features = false }
# nb = "1.0.0"
# embedded-storage = "0.3.1"
# static_cell = "2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-
